--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
+    "@mui/material": "^5.16.5",
     "@next/third-parties": "^14.2.5",
     "@radix-ui/react-slot": "^1.1.0",
     "chart.js": "^4.4.3",
