--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^5.16.5",
     "@next/third-parties": "^14.2.5",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.416.0",
+    "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
